<resources>
    <string name="app_name">NavigationDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Menu strings -->
    <string name="shopping_cart">Shopping Cart</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="deep_link">Deep Link</string>

    <!-- Screen strings -->
    <string name="step_one">Step One</string>
    <string name="step_two">Step Two</string>
    <string name="deep_link_instructions">Type your deep link args</string>
    <string name="settings_fragment_text">Settings Fragment</string>
    <string name="shopping_fragment_text">Shopping Fragment</string>
    <string name="navigate_destination_button">Navigate to destination</string>
    <string name="navigate_action_button">Navigate with action</string>
    <string name="next_step_button">Navigate next step</string>
    <string name="finish_button">Finish Flow</string>
    <string name="send_deep_link_notification_button">Send deep link notification</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>